--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/udacity/reactnd-chirper-app.git"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
