--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "chirper",
   "version": "0.1.0",
+  "homepage": "https://bibishan-pandey.github.io/redux-twitter/",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "license": "MIT",
